--- a/scss/shared.scss
+++ b/scss/shared.scss
@@ -17,6 +17,7 @@ body {
   height: 100vh;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
+  margin-bottom: 110px;
 }
 
 .color-picker-main-container {
